--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <script>
-    const objectje = {
+    const exampleNestedObj = {
       a: {
         data: {
           strings: ['Hello', 'Byebye'],
@@ -30,13 +30,13 @@
       }
     }
 
-    for (const firstString of objectje) {
+    for (const firstString of exampleNestedObj) {
       console.log(firstString);
     }
 
     //////////////////////////////////////////////////
 
-    const iterator = getNthStrings(objectje, 1);
+    const iterator = getNthStrings(exampleNestedObj, 1);
     console.log(iterator.next(), iterator.done);
     console.log(iterator.next(), iterator.done);
     console.log(iterator.next(), iterator.done);
